tests/NormalTests/paczka1/small_fuzzy/12801801.err
Error in line 5: xnkHjpeu S724 78,8
Error in line 8: A641 S724 7,1
Error in line 9: A641 S293 69,8
